# ai-arch

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.api  Dockerfile.worker  README.md  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  indexer.py  main.py  pyproject.toml  pytest.ini  requirements.txt
.dvc/: config
.github/workflows/: ci.yml
data/: ratings.csv.dvc
docs/recipes/: sample_recipes.json
mlflow_artifacts/1/4a9bafe2de1741acb4a7b3b4b94a1359/artifacts/model/: MLmodel  python_env.yaml  requirements.txt
mlflow_artifacts/679711966126207123/142054e8d41b4e51a0f05ad1903ec595/artifacts/model/: MLmodel  conda.yaml  model.onnx
mlflow_artifacts/972970927929917873/b81fcd511e774be9a70f49c6c26af515/artifacts/model/: MLmodel  conda.yaml
mlflow_db/: mlflow.db
models/: movie_recommender.onnx  movie_recommender.onnx.dvc
scripts/: init_minio.py  quality_gate.py  setup_data.py  train_model.py  upload_model.py
src/: container.py
src/application/: services.py
src/application/DTOs/: qa_dto.py
src/application/Interfaces/: i_rag_service.py
src/application/Services/: rag_service.py
src/config/: genre_encoding.py
src/domain/: entities.py  interfaces.py
src/domain/Interfaces/: i_llm_service.py  i_vector_db_service.py
src/infrastructure/: models.py  onnx_model.py  storage.py
src/infrastructure/Services/: llm_service.py  vector_db_service.py
src/presentation/: api.py  celery_app.py  cli.py  dependencies.py  tasks.py
src/presentation/Controllers/: qa_controller.py
tests/: conftest.py  test_async.py  test_cli.py  test_onnx_model.py  test_storage_and_sync.py
tests/Application.Tests/: test_rag_service.py
tests/Domain.Tests/: test_entities.py
