[tool.poetry]
name = "movie-recommender"
version = "0.1.0"
description = "Movie recommendation system with DVC + MinIO integration"
authors = ["Kirill S <kiril30ru@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.0"
dvc = "^3.0.0"
dvc-s3 = "^3.0.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.0"
pandas = "^2.1.0"
scikit-learn = "1.3.2"
skl2onnx = "1.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-mock = "^3.11"
dvc = "^3.0.0"
dvc-s3 = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"