[tool.poetry]
name = "movie-recommender"
version = "0.1.0"
description = "Movie recommendation system with DVC + MinIO integration"
authors = ["Kirill S <kiril30ru@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.135.0"
uvicorn = "^0.31.0"
pydantic = "^2.10.0"
onnxruntime = "^1.24.0"
pandas = "^2.2.0"
scikit-learn = "^1.6.0"
skl2onnx = "^1.18.0"
onnx = "^1.17.0"
celery = "^5.6.3"
redis = "^7.4.0"
mlflow = "^2.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
requests = "^2.32.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"